--- a/src/Rookie.Ecom.Customer/Rookie.Ecom.Customer.csproj
+++ b/src/Rookie.Ecom.Customer/Rookie.Ecom.Customer.csproj
@@ -6,11 +6,18 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Rookie.Ecom.Business\Rookie.Ecom.Business.csproj" />
     <ProjectReference Include="..\Rookie.Ecom.Contracts\Rookie.Ecom.Contracts.csproj" />
+    <ProjectReference Include="..\Rookie.Ecom.DataAccessor\Rookie.Ecom.DataAccessor.csproj" />
   </ItemGroup>
 
 </Project>
