--- a/src/Rookie.Ecom.Web/ClientApp/package.json
+++ b/src/Rookie.Ecom.Web/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
     "bootstrap": "^4.3.1",
     "jquery": "3.3.1",
     "oidc-client": "^1.8.2",
